api/src/graph/snapshots/hopr_api__graph__costs__tests__forward_first_edge_negative_when_connected_intermediate_but_no_capacity.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 0, result_cost: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
  intermediate:
    capacity: ~
    score: 0.95
initial_cost: 1
path_index: 0
result_cost: -1
