api/src/graph/snapshots/hopr_api__graph__costs__tests__forward_first_edge_penalized_when_no_ack_data.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 0, result_cost: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: ~
  intermediate:
    capacity: 1000
    score: 0.95
initial_cost: 1
path_index: 0
result_cost: 0.475
