api/src/graph/snapshots/hopr_api__graph__costs__tests__forward_first_edge_positive_when_capacity_only_no_intermediate_probe.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 0, result_cost: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
  intermediate:
    capacity: 1000
    score: 0
initial_cost: 1
path_index: 0
result_cost: 0.95
