api/src/graph/snapshots/hopr_api__graph__costs__tests__forward_intermediate_edge_negative_when_no_capacity.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 1, result_cost: cost }"
---
observations:
  immediate: ~
  intermediate:
    capacity: ~
    score: 0.95
initial_cost: 1
path_index: 1
result_cost: -1
