api/src/graph/snapshots/hopr_api__graph__costs__tests__forward_intermediate_edge_scales_by_intermediate_score.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 2.0, path_index: 1, result_cost: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.9
  intermediate:
    capacity: 1000
    score: 0.95
initial_cost: 2
path_index: 1
result_cost: 1.9
